# PietCreator

./: CMakeLists.txt  CommandDelegate.cpp  ImageModel.cpp  KColorCells.cpp  KColorMimeData.cpp  MainWindow.cpp  ResizeDialog.cpp  RunController.cpp  main.cpp  shell.nix
npiet/: CMakeLists.txt  npiet.c
